--- a/First_page_html_js_css/style.css
+++ b/First_page_html_js_css/style.css
@@ -68,3 +68,13 @@ a:hover {
     /* margin-bottom: 30px; */
     border: 5px solid #d5d4ca;
 }
+
+.sectionUser {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+.card {
+    border: 4px solid white;
+}
